--- a/track.css
+++ b/track.css
@@ -7,10 +7,12 @@ body {
 }
 
 .canvasbox {
+    position:absolute;
+    right: 10px;
     border-radius: 3px;
     margin-right: 10px;
-    width: 450px;
-    height: 338px;
+    width: 215px;
+    height: 162px;
     border-bottom: 3px solid #0063FF;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 #00000030;
   background: #333;
